# Django_framework

./: README.md  dump.rdb  locustfile.py  pyproject.toml  requirements.txt
authapp/migrations/: 0001_initial.py  0002_alter_customuser_username.py
authapp/templates/registration/: login.html
config/: settings.py  urls.py
locale/ru/LC_MESSAGES/: django.po
mainapp/: admin.py  tests.py  urls.py  views.py
mainapp/migrations/: 0001_initial.py  0003_auto_20220905_2033.py  0004_coursefeedback.py
mainapp/templates/mainapp/: contacts.html  courses_list.html  doc_site.html  index.html  login.html  news.html
mainapp/templatetags/: datetime_new.py  get_news.py  nexter.py
templates/: base.html  news.json
templates/includes/: main_menu.html
