[tool.poetry]
name = "braniac"
version = "0.1.0"
description = "Современная платформа для обучения. Прогрессивный взгляд на простые вещи."
authors = ["FuckingSherlock"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
